feat: add family todos

--- a/mom.html
+++ b/mom.html
@@ -9,7 +9,7 @@
     <script src="todo-app.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            createTodoApp(document.querySelector('#todo-app'), 'My todos');
+            createTodoApp(document.querySelector('#todo-app'), 'Mom todos');
         })
     </script>
 </head>
