--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="todo-app.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            createTodoApp(document.querySelector('#todo-app'), 'My todos');
-        })
+            createTodoApp(document.querySelector('#todo-app'), 'My todos', todoList);
+        });
     </script>
 </head>
 <body>
