feat: add localStorage keys

--- a/dad.html
+++ b/dad.html
@@ -9,7 +9,7 @@
     <script src="todo-app.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            createTodoApp(document.querySelector('#todo-app'), 'Dad todos');
+            createTodoApp(document.querySelector('#todo-app'), 'Dad todos', 'DadTodos');
         })
     </script>
 </head>
