--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="todo-app.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            createTodoApp(document.querySelector('#todo-app'), 'My todos', todoList);
+            createTodoApp(document.querySelector('#todo-app'), 'My todos', 'MyTodos');
         });
     </script>
 </head>
